force-app/main/default/objects/CifFeDictLocationVw__x/CifFeDictLocationVw__x.object-meta.xml
<CustomObject>
    <description>CifFeDictLocationVw</description>
    <externalDataSource>OData_Service</externalDataSource>
    <externalName>CifFeDictLocationVw</externalName>
    <label>CifFeDictLocationVw</label>
    <pluralLabel>CifFeDictLocationVw</pluralLabel>
</CustomObject>