force-app/main/default/objects/CifFeDictLocationVw__x/fields/CODE__c.field-meta.xml
<CustomField>
    <fullName>CODE__c</fullName>
    <description>CODE</description>
    <externalDeveloperName>CODE</externalDeveloperName>
    <label>CODE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>