force-app/main/default/objects/CifFeDictLocationVw__x/fields/EFFECTIVEDATE__c.field-meta.xml
<CustomField>
    <fullName>EFFECTIVEDATE__c</fullName>
    <description>EFFECTIVEDATE</description>
    <externalDeveloperName>EFFECTIVEDATE</externalDeveloperName>
    <label>EFFECTIVEDATE</label>
    <type>DateTime</type>
</CustomField>