force-app/main/default/objects/CifFeDictLocationVw__x/fields/ISACTIVE__c.field-meta.xml
<CustomField>
    <fullName>ISACTIVE__c</fullName>
    <description>ISACTIVE</description>
    <externalDeveloperName>ISACTIVE</externalDeveloperName>
    <label>ISACTIVE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>