force-app/main/default/objects/CifFeDictLocationVw__x/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <description>NAME</description>
    <externalDeveloperName>NAME</externalDeveloperName>
    <label>NAME</label>
    <length>128</length>
    <type>Text</type>
</CustomField>