force-app/main/default/objects/CifFeDictLocationVw__x/fields/NAME_EN__c.field-meta.xml
<CustomField>
    <fullName>NAME_EN__c</fullName>
    <description>NAME_EN</description>
    <externalDeveloperName>NAME_EN</externalDeveloperName>
    <label>NAME_EN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>