force-app/main/default/objects/CifFeDictLocationVw__x/fields/PARENTCODE__c.field-meta.xml
<CustomField>
    <fullName>PARENTCODE__c</fullName>
    <description>PARENTCODE</description>
    <externalDeveloperName>PARENTCODE</externalDeveloperName>
    <label>PARENTCODE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>