force-app/main/default/objects/CifFeDictLocationVw__x/fields/ROWID__c.field-meta.xml
<CustomField>
    <fullName>ROWID__c</fullName>
    <description>ROWID</description>
    <externalDeveloperName>ROWID</externalDeveloperName>
    <label>ROWID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>