force-app/main/default/objects/CifFeDictLocationVw__x/fields/SCHEME__c.field-meta.xml
<CustomField>
    <fullName>SCHEME__c</fullName>
    <description>SCHEME</description>
    <externalDeveloperName>SCHEME</externalDeveloperName>
    <label>SCHEME</label>
    <length>128</length>
    <type>Text</type>
</CustomField>